syntax="proto3";

package user;

option go_package="github.com/asmile1559/dyshop/pb/backend/user;user";

service UserService {
    rpc Register(RegisterReq) returns (RegisterResp) {}  // 注册
    rpc Login(LoginReq) returns (LoginResp) {}          // 登录
    rpc UpdateUserInfo(UpdateUserInfoReq) returns (UpdateUserInfoResp) {}  // 更新用户信息
    rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoResp) {}  // 获取用户信息
    rpc GetAccountInfo(GetAccountInfoReq) returns (GetAccountInfoResp) {} //获取账户信息
    rpc UpdateAccount(UpdateAccountReq) returns (UpdateAccountResp) {}  // 修改账户信息（如邮箱、密码）
    rpc DeleteUser(DeleteUserReq) returns (DeleteUserResp) {}  // 删除账户
    rpc UploadAvatar(UploadAvatarReq) returns (UploadAvatarResp) {}  // 上传头像
    rpc RegisterMerchant(RegisterMerchantReq) returns (RegisterMerchantResp) {}  // 注册成为商户
}

// -------------------- 用户注册 -------------------- //
message RegisterReq {
    string email = 1;
    string password = 2;
    string confirm_password = 3;
}

message RegisterResp {}

// -------------------- 用户登录 -------------------- //
message LoginReq {
    string email = 1;
    string password = 2;
}

message LoginResp {
    string token = 1;
}

// -------------------- 获取用户基本信息 -------------------- //
message GetUserInfoReq {
    int64 user_id = 1;
}

message GetUserInfoResp {
    int64 user_id = 1;
    string name = 2;
    string sign = 3;
    string url = 4;
    repeated string role = 5;
    string gender = 6;
    string birthday = 7;
    
}

// -------------------- 修改用户基本信息 -------------------- //
message UpdateUserInfoReq {
    int64 user_id = 1;
    string name = 2;
    string sign = 3;
    string gender = 4;
    string birthday = 5;
}

message UpdateUserInfoResp {
    int64 user_id = 1;
    string name = 2;
    string sign = 3;
}

// -------------------- 上传用户头像 -------------------- //
message UploadAvatarReq {
    int64 user_id = 1;
    string filename = 2;
    bytes image_data = 3;  // **整个图片数据**
}

message UploadAvatarResp {
    int64 user_id = 1;
    string url = 2;
}

// -------------------- 获取账户信息 -------------------- //
message GetAccountInfoReq{
    int64 user_id = 1;
}

message GetAccountInfoResp{
    int64 user_id = 1;
    string name = 2;
    string sign = 3;
    string url = 4;
    repeated string role = 5;
    string phone = 6;
    string email = 7;
}

// -------------------- 修改账户信息 -------------------- //
message UpdateAccountReq {
    int64 user_id = 1;
    string phone = 2;
    string email = 3;
    string password = 4;
    string new_password = 5;
    string confirm_password = 6;
}

message UpdateAccountResp {
    int64 user_id = 1;
    string phone = 2;
    string email = 3;
}

// -------------------- 删除用户账户 -------------------- //
message DeleteUserReq {
    int64 user_id = 1;
}

message DeleteUserResp {}

// -------------------- 注册成为商户 -------------------- //
message RegisterMerchantReq {
    int64 user_id = 1;
}

message RegisterMerchantResp {}